# ts_ka4alka

./: CMakeLists.txt
src/: MainWindow.cpp  MainWindow.h  m3u8.cpp  m3u8.h
